--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a {
 }
 
 .banner {
-  max-width: 80%;
+  max-width: fit-content;
   padding-top: 32px;
   margin: auto;
 }
@@ -59,6 +59,10 @@ a {
   border-radius: 15%;
 }
 
+.banner-social {
+  max-width: fit-content;
+}
+
 .banner-social h2 {
   font-weight: 700;
   font-size: 2em;
@@ -67,7 +71,7 @@ a {
 }
 
 .social-network {
-  max-width: 50%;
+  max-width: fit-content;
   margin: auto;
 }
 
