refactor: ContactForm component

--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -35,7 +35,7 @@ import Button from '~/components/ui/Button.astro';
             class="max-w-xs sm:max-w-md m-auto flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4 intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
           >
             <div class="flex w-full sm:w-auto">
-              <Button variant="primary" href={getPermalink('/contact#form')} class="w-full sm:mb-0">
+              <Button variant="primary" href={getPermalink('/contact#contact-form')} class="w-full sm:mb-0">
                 Let's talk
               </Button>
             </div>
