fix: import typo

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import ContactUs from '~/components/widgets/Contact.astro';
+import ContactForm from '~/components/widgets/ContactForm.astro';
 import Features2 from '~/components/widgets/Features2.astro';
 
 const metadata = {
@@ -30,7 +30,7 @@ const metadata = {
     </div>
   </section>
 
-  <ContactUs
+  <ContactForm
     id="form"
     inputs={[
       {
