refactor: unused props

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -30,26 +30,7 @@ const metadata = {
     </div>
   </section>
 
-  <ContactForm
-    id="form"
-    inputs={[
-      {
-        type: 'text',
-        name: 'name',
-        label: 'Name',
-      },
-      {
-        type: 'email',
-        name: 'email',
-        label: 'Email',
-      },
-    ]}
-    textarea={{
-      label: 'Message',
-    }}
-  />
-
-  <!-- Features2 Widget ************** -->
+  <ContactForm />
 
   <Features2
     title="Alternative contact methods"
