refactor: add Skills component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '~/layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 import Content from '~/components/widgets/Content.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
-import Features3 from '~/components/widgets/Features3.astro';
+import Skills from '~/components/widgets/Skills.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 import MeImage from '~/assets/images/me.jpg';
@@ -118,9 +118,7 @@ During my time on the project, I learned to work effectively in a team and honed
     classes={{ container: 'max-w-3xl' }}
   />
 
-  <!-- Features3 Widget ************** -->
-
-  <Features3
+  <Skills
     title="Skills"
     subtitle="Discover the technical proficiencies that power my fullstack solutions."
     columns={3}
