feat: add form submition

--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -5,7 +5,7 @@ import Button from '~/components/ui/Button.astro';
 const { inputs, textarea, disclaimer, button = 'Contact me', description = '' } = Astro.props;
 ---
 
-<form>
+<form action="https://formsubmit.co/matheusgabriel.18@gmail.com" method="POST">
   {
     inputs &&
       inputs.map(
