feat: add spacing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,14 +84,14 @@ const metadata = {
         title:
           'Software Engineer <br /> <span class="font-normal">UOL ads, Remote</span> <br /> <span class="text-sm font-normal">2022 - Present</span>',
         description: `At UOL, I work as a fullstack software engineer on the UOL Ads product. As part of a talented development team, I use agile methodologies such as Scrum to develop the frontend primarily using Vue.js, JavaScript, and SASS, and the backend using microservices with the Spring Framework and Node.js.
-Additionally, I focus on innovation using Artificial Intelligence to enhance and evolve product solutions.
+Additionally, I focus on innovation using Artificial Intelligence to enhance and evolve product solutions.<br />
 My goal is to contribute to the continuous evolution of UOL Ads in a scalable and self-testing manner, always applying best development practices to ensure that the product remains a reliable and high-quality solution.`,
         icon: 'tabler:briefcase',
       },
       {
         title:
           'Trainee <br /> <span class="font-normal">Asa Branca Aerospace, Brazil, Recife - PE</span> <br /> <span class="text-sm font-normal">2020 - 2021</span>',
-        description: `In the Asa Branca extension project at UFPE, I worked as a programmer on the control team. My main responsibility was to develop the tracking feature for the CubeSat using the C++ programming language. Additionally, I was also responsible for reporting progress on a weekly basis in meetings with the team.
+        description: `In the Asa Branca extension project at UFPE, I worked as a programmer on the control team. My main responsibility was to develop the tracking feature for the CubeSat using the C++ programming language. Additionally, I was also responsible for reporting progress on a weekly basis in meetings with the team.<br />
 
 During my time on the project, I learned to work effectively in a team and honed my programming and problem-solving skills. This experience provided me with valuable technical and interpersonal skills that continue to be relevant in my current career as a fullstack software engineer.`,
         icon: 'tabler:briefcase',
