fix: change home title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 import MeImage from '~/assets/images/me.jpg';
 
 const metadata = {
-  title: "Matheus's website",
+  title: "Home",
 };
 ---
 
